--- a/02-CSS/14-ej-display-flex/index.html
+++ b/02-CSS/14-ej-display-flex/index.html
@@ -8,21 +8,22 @@
   <link rel="stylesheet" href="./reset/reset.css">
   <title>Ejemplo display flex</title>
 </head>
+
 <body class="container">
   <h1>Ejemplo display flex</h1>
   <div class="menu">
     <img src="/favicon.png" alt="">
     <div class="item">
-      <a class="home" href="#">Home</a>
+      <a class="titulo" href="#">Home</a>
       <div class="subitem">
           <div class="link">
-            <a href="">link1</a>
+            <a class="subtitulo" href="">link1</a>
           </div>
           <div class="link">
-            <a href="">link2</a>
+            <a class="subtitulo" href="">link2</a>
           </div>
           <div class="link">
-            <a href="">link3</a>
+            <a class="subtitulo" href="">link3</a>
           </div>
       </div>
     </div>
@@ -30,27 +31,51 @@
 
 
     <div class="item">
-      <a href="#">Blog</a>
+      <a class="titulo" href="#">Blog</a>
 
       <div class="subitem">
         <div class="link">
-          <a href="">link1</a>
+          <a class="subtitulo"  href="">link1</a>
         </div>
         <div class="link">
-          <a href="">link2</a>
+          <a class="subtitulo"  href="">link2</a>
         </div>
         <div class="link">
-          <a href="">link3</a>
+          <a class="subtitulo"  href="">link3</a>
         </div>
       </div>
     </div>
 
 
     <div class="item">
-      <a href="#">Fotos</a>
+      <a class="titulo" href="#">Fotos</a>
+
+      <div class="subitem">
+        <div class="link">
+          <a class="subtitulo" href="">link1</a>
+        </div>
+        <div class="link">
+          <a class="subtitulo" href="">link2</a>
+        </div>
+        <div class="link">
+          <a class="subtitulo" href="">link3</a>
+        </div>
+      </div>
     </div>
+
     <div class="item">
-      <a href="#">Contacto</a>
+      <a class="titulo" href="#">Contacto</a>
+      <div class="subitem">
+        <div class="link">
+          <a class="subtitulo" href="">link1</a>
+        </div>
+        <div class="link">
+          <a class="subtitulo" href="">link2</a>
+        </div>
+        <div class="link">
+          <a class="subtitulo" href="">link3</a>
+        </div>
+      </div>
     </div>
    
   </div>
