--- a/03-SASS/05-ej-componentes sass/index.html
+++ b/03-SASS/05-ej-componentes sass/index.html
@@ -33,11 +33,9 @@
       
     </div>
 
-    <div class="caja-hijo5">
-      <img src="./assets/img/image-header-desktop.jpg" alt="">
-
-
-  </div>
+    <div class="caja-hijo5 overlay">
+      <!-- <img src="./assets/img/image-header-desktop.jpg" alt=""> -->
+   </div>
 
 
 </body>
