--- a/03-SASS/06-ejercicio-sass/index.html
+++ b/03-SASS/06-ejercicio-sass/index.html
@@ -18,7 +18,29 @@
           <p>Discover the benefits of data analitics and make better decisions regarding revenue, customer experience,and overall efficiency.</p>
         </div>
         <div class="hijo3">
-          
+
+          <div class="data1">
+            <h1>10k+
+              <p>companies</p>
+            </h1>
+          </div>
+
+          <div class="data2">
+            <h1>314
+              <p>templates</p>
+            </h1>
+          </div>
+
+          <div class="data3">
+            <h1>12M+
+              <p>queries</p>
+            </h1>
+          </div>
+
+        </div>
+        <div class="hijo4 overlay">
+          <img src="../05-ej-componentes-sass/assets/img/image-header-desktop.jpg" alt="">
+
         </div>
       </div>
 
