--- a/03-SASS/06-ejercicio-sass/index.html
+++ b/03-SASS/06-ejercicio-sass/index.html
@@ -38,9 +38,9 @@
           </div>
 
         </div>
-        <div class="hijo4 overlay">
+        <div class="hijo4">
           <img src="../05-ej-componentes-sass/assets/img/image-header-desktop.jpg" alt="">
-          
+          <div class="overlay"></div>
         </div>
       </div>
 
