--- a/02-CSS/20-ej-maquetacion-final/index.html
+++ b/02-CSS/20-ej-maquetacion-final/index.html
@@ -42,7 +42,7 @@
         
           <div class="article1 text">
            
-            <i class="icon bi bi-lightning"></i>
+            <i class="bi bi-wind"></i>
             <h2>ARTÍCULO 1</h2>
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt quae cum hic minus consequatur iste obcaecati aperiam nisi amet, officia adipisci voluptates, aut quas voluptate incidunt repellendus facilis rerum eaque dignissimos! Neque, tempora sapiente.</P>
           </div>
