--- a/04-BOOTSTRAP/08-ej-maquetacion/ej-bis/index.html
+++ b/04-BOOTSTRAP/08-ej-maquetacion/ej-bis/index.html
@@ -19,12 +19,12 @@
   <header class="row ">
     <div class="bg-primary">
 
-      <div class=" col-12 col-md-2">
-        <img class="p-3 float-start" src="http://placeimg.com/50/50/animals" alt="Foto de un animal">
+      <div class=" col-12 col-md-auto">
+        <img class="p-3 float-start border" src="http://placeimg.com/50/50/animals" alt="Foto de un animal">
       </div>
 
-      <div class="d-inline-block col-12 col-md-5">
-        <nav>
+      <div class="d-flex justify-content-center col-12 col-md-auto">
+        <nav class="border">
           <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Inicio</a>
           <a class="text-dark fw-bold text-decoration-none mx-3 " href="#">Nosotros</a>
           <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Blog</a>
@@ -32,8 +32,8 @@
         </nav>
       </div>
 
-      <div  class="d-inline-block col-12 offset-2 col-md-3">
-        <form>
+      <div  class="d-flex col-12 offset-2 col-md-auto">
+        <form class="border">
           <input type="text" placeholder="Search...">
           <button class="btn btn-sm btn-warning rounded-0">Login</button>
         </form>
@@ -43,7 +43,7 @@
   </header>
 
   <div class="container">
-    <main class="row col-12 col-md-6 order-1">
+    <main class="row col-12 col-md-6 order-1 my-4">
       <div class="bg-danger">
         <h1>!Bienvenid@ a mi web!</h1>
         <div>
@@ -58,7 +58,7 @@
 
     <div class="  col-md-3 order-3 text-center gy-2 gx-2">
       <article class="bg-info justify-content-center">
-        <i class="bi bi-wind"></i>
+        <i class="bi bi-wind fs-1"></i>
         <h2>ARTÍCULO 1</h2>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt quae cum hic minus consequatur iste obcaecati aperiam nisi amet, officia adipisci voluptates, aut quas voluptate incidunt repellendus facilis rerum eaque dignissimos! Neque, tempora sapiente.</P>
       </article>
@@ -66,7 +66,7 @@
 
     <div class=" col-md-3 order-4 text-center gy-2 gx-2">
       <article class="bg-info justify-content-center">
-        <i class="bi bi-vector-pen"></i>
+        <i class="bi bi-vector-pen fs-1 "></i>
         <h2>ARTÍCULO 2</h2>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt quae cum hic minus consequatur iste obcaecati aperiam nisi amet, officia adipisci voluptates, aut quas voluptate incidunt repellendus facilis rerum eaque dignissimos! Neque, tempora sapiente.</P>
       </article>
@@ -77,7 +77,7 @@
    <section class="row col-12" >
     <div class=" col-md-6 order-5 text-center gy-2 gx-2">
       <article class="bg-info justify-content-center">
-        <i class="bi bi-upc-scan"></i>
+        <i class="bi bi-upc-scan fs-1"></i>
         <h2>ARTÍCULO 3</h2>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt quae cum hic minus consequatur iste obcaecati aperiam nisi amet, officia adipisci voluptates, aut quas voluptate incidunt repellendus facilis rerum eaque dignissimos! Neque, tempora sapiente.</P>
       </article>
