--- a/04-BOOTSTRAP/08-ej-maquetacion/ej-bis/index.html
+++ b/04-BOOTSTRAP/08-ej-maquetacion/ej-bis/index.html
@@ -16,27 +16,27 @@
 </head>
 
 <body>
-  <header class="row ">
-    <div class="bg-primary">
+  <header class="bg-primary">
+    <div class="container">
 
-      <div class=" col-12 col-md-auto">
-        <img class="p-3 float-start border" src="http://placeimg.com/50/50/animals" alt="Foto de un animal">
-      </div>
-
-      <div class="d-flex justify-content-center col-12 col-md-auto">
-        <nav class="border">
-          <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Inicio</a>
-          <a class="text-dark fw-bold text-decoration-none mx-3 " href="#">Nosotros</a>
-          <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Blog</a>
-          <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Contacto</a>
-        </nav>
-      </div>
-
-      <div  class="d-flex col-12 offset-2 col-md-auto">
-        <form class="border">
-          <input type="text" placeholder="Search...">
-          <button class="btn btn-sm btn-warning rounded-0">Login</button>
-        </form>
+      <div class="row align-items-md-center gy-3">
+        <div class=" col-12 col-md-auto">
+          <img class="p-3 float-start border" src="http://placeimg.com/50/50/animals" alt="Foto de un animal">
+        </div>
+        <div class="d-flex justify-content-center col-12 col-md-auto">
+          <nav class="border">
+            <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Inicio</a>
+            <a class="text-dark fw-bold text-decoration-none mx-3 " href="#">Nosotros</a>
+            <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Blog</a>
+            <a class="text-dark fw-bold text-decoration-none mx-3" href="#">Contacto</a>
+          </nav>
+        </div>
+        <div  class="d-flex col-12 offset-2 col-md-auto">
+          <form class="border">
+            <input type="text" placeholder="Search...">
+            <button class="btn btn-sm btn-warning rounded-0">Login</button>
+          </form>
+        </div>
       </div>
 
     </div>
