--- a/04-BOOTSTRAP/09-instalando-bootstrap/index.html
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/index.html
@@ -9,12 +9,40 @@
 
    <!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <title></title>
 </head>
-<body>
-  <h1 class="bg-butano">Instalando Bootstrap</h1>
-  <h1 class="bg-bprimary">Instalando Bootstrap</h1>
+<body class="background">
+  
+    <div class="container">
+        <header class="caja-padre">
+            <div class="header">
 
+              <div class="caja1">
+                <i class="cross bi bi-x-lg"></i>
+                <i class="circle bi bi-circle"></i>
+              </div>
+
+              <div class="caja2">
+                <i class=" cross bi bi-x-lg"></i>
+                <p>TURN</p>
+              </div>
+              
+              <div class="caja3">
+                 <i class="bi bi-arrow-clockwise"></i>
+              </div>
+
+            </div>
+        </header>
+        <main>
+
+
+        </main>
+        <footer>
+
+        </footer>
+        
+    </div>
 
 </body>
 </html>
