--- a/04-BOOTSTRAP/09-instalando-bootstrap/index.html
+++ b/04-BOOTSTRAP/09-instalando-bootstrap/index.html
@@ -20,22 +20,24 @@
 
               <div class="head1">
                 <!-- <i class="cross bi bi-x-lg"></i> -->
-                <div class="icon">
+                <div class="icon d-flex align-items-end align-self-start gap-1">
                   <svg width="50%" height="50%" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" ><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#31C3BD" fill-rule="evenodd"></path></svg>
                 </div>
                 <!-- <i class="circle bi bi-circle"></i> -->
-                <div class="icon">
+                <div class="icon d-flex  align-items-end align-self-start gap-1">
                   <svg width="50%" height="50%" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" "><path d="M32 0c17.673 0 32 14.327 32 32 0 17.673-14.327 32-32 32C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0Zm0 18.963c-7.2 0-13.037 5.837-13.037 13.037 0 7.2 5.837 13.037 13.037 13.037 7.2 0 13.037-5.837 13.037-13.037 0-7.2-5.837-13.037-13.037-13.037Z" fill="#F2B137"></path></svg>
                 </div>
               </div>
 
               <div class="head2">
                 <!-- <i class=" cross bi bi-x-lg"></i> -->
-                <div class="icon">
+                <div class="icon d-flex justify-content-center align-items-center gap-2">
                   <svg width="50%" height="50%" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg" ><path d="M15.002 1.147 32 18.145 48.998 1.147a3 3 0 0 1 4.243 0l9.612 9.612a3 3 0 0 1 0 4.243L45.855 32l16.998 16.998a3 3 0 0 1 0 4.243l-9.612 9.612a3 3 0 0 1-4.243 0L32 45.855 15.002 62.853a3 3 0 0 1-4.243 0L1.147 53.24a3 3 0 0 1 0-4.243L18.145 32 1.147 15.002a3 3 0 0 1 0-4.243l9.612-9.612a3 3 0 0 1 4.243 0Z" fill="#31C3BD" fill-rule="evenodd"></path></svg>
                 </div>
                 <div class="text color">
-                  <p>TURN</p>
+                  <span>
+                    TURN
+                  </span>
                 </div>
               </div>
               
@@ -85,7 +87,9 @@
 
               <div class="score1">
                 <div class="text">
-                  <p>X(YOU)</p>
+                  <span>
+                    X(YOU)
+                  </span>
                 </div>
                 <div class="number">
                   <h3>14</h3>
@@ -94,7 +98,7 @@
 
               <div class="score2 grey">
                 <div class="text">
-                  <p>TIE</p>
+                  <span>TIE</span>
                 </div>
                 <div class="number">
                   <h3>32</h3>
@@ -103,7 +107,7 @@
 
               <div class="score3">
                 <div class="text">
-                  <p>O(CPU)</p>
+                  <span>O(CPU)</span>
                 </div>
                 <div class="number">
                   <h3>11</h3>
