--- a/05-JAVASCRIPT/11-ej-bucles/index.html
+++ b/05-JAVASCRIPT/11-ej-bucles/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="../../favicon.png">
-  <title>Ej. Bucles</title>
+  <title>Ejercicios de bucles</title>
 </head>
 <body>
-  <h1>Ej. Bucles</h1>
+  <h1>Ejercicios de bucles</h1>
 
 <script src="./main.js"></script>
 </body>
